# streaming

./: .env.example  .gitignore  README.md
.cursor/rules/: live-sports.mdc
catalog/data/: live-channels.yaml  media-aliases.yaml  torrent-search-aliases.yaml  watchlist.json
deploy/: KEYLESS.md  docker-compose.vpn.yml  docker-compose.yml
deploy/docs/: cloudflare-cdn.md
deploy/nginx/: default.conf  default.vpn.conf  ingestion.conf
deploy/scripts/: apply-d-and-download.ps1  (+28 more)
docs/: ARCHITECTURE.md  CHANGELOG.md
scripts/: build_seed_from_catalog.py
skills/catalog-metadata/: Dockerfile  SKILL.md  pyproject.toml
skills/catalog-metadata/agents/: bulk-watchlist-acquisition.md  torrent-acquisition.md
skills/catalog-metadata/src/: acquire_errors.py  bulk_watchlist_agent.py  cocktail_importer.py  config.py  episode_sync.py  ingest_orchestrator.py  jackett_client.py  main.py  media_library.py  metadata_enricher.py  prowlarr_config.py  qbittorrent_client.py  request_service.py  seed_importer.py  skill_telemetry.py  system_status.py  text_utils.py  tmdb_client.py  torrent_acquisition_agent.py  torrent_search_aliases.py  torznab_client.py  url_utils.py  yts_client.py
skills/catalog-metadata/src/api/: routes.py  schemas.py
skills/catalog-metadata/src/db/: migrations.py  repository.py  schema.sql
skills/catalog-metadata/tests/: test_media_library.py  test_shared.py  test_torrent_acquisition_agent.py
skills/ingestion-torrent/: CHANGELOG.md  Dockerfile  SKILL.md  pyproject.toml
skills/ingestion-torrent/src/: config.py  main.py  skill_telemetry.py  stream_reader.py  torrent_engine.py
skills/ingestion-torrent/src/api/: routes.py  schemas.py
skills/ingestion-torrent/tests/: test_episode_pick.py  test_health.py  test_shared.py
skills/live-sports/: CHANGELOG.md  Dockerfile  SKILL.md  pyproject.toml
skills/live-sports/src/: channel_catalog.py  config.py  drm_license_proxy.py  drm_license_store.py  m3u8_rewriter.py  main.py  proxy_client.py  rtve_resolver.py  skill_telemetry.py  static_resolver.py  url_validator.py  vpn_check.py
skills/live-sports/src/api/: routes.py
skills/live-sports/src/resolvers/: __init__.py  _scrape_utils.py  bbc_iplayer_resolver.py  brightcove_resolver.py  ccma_resolver.py  clm_resolver.py  cyltv_resolver.py  france_tv_resolver.py  ib3_resolver.py  murcia_resolver.py  navarra_resolver.py  rai_resolver.py  registry.py  rtve_resolver.py  static_resolver.py  tpa_resolver.py  trc_resolver.py  tvg_resolver.py  types.py
skills/live-sports/tests/: test_shared.py
skills/storage-hls/: CHANGELOG.md  Dockerfile  SKILL.md  pyproject.toml
skills/storage-hls/src/: config.py  ffmpeg_runner.py  job_manager.py  job_store.py  main.py  manifest_utils.py  s3_client.py  skill_telemetry.py
skills/storage-hls/src/api/: routes.py  schemas.py
skills/storage-hls/tests/: test_shared.py
(+102 files in other folders)
