[project]
name = "catalog-metadata"
version = "0.1.0"
description = "SKILL #6 — Catalog metadata, Jackett resolver, ingest orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../shared/python"]
